--- a/package.json
+++ b/package.json
@@ -40,6 +40,15 @@
     "dependencies": {
         "bootstrap": "5.2.3",
         "shelljs": "^0.8.5",
+        "autoprefixer": "10.4.14",
+        "browser-sync": "2.29.1",
+        "chokidar": "3.5.3",
+        "concurrently": "6.3.0",
+        "postcss": "8.4.21",
+        "prettier": "2.8.6",
+        "pug": "3.0.2",
+        "sass": "1.60.0",
+        "upath": "2.0.1",
         "bootstrap-icons": "^1.11.1"
     },
     "devDependencies": {
