--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "build:scripts": "node scripts/build-scripts.js",
         "build:scss": "node scripts/build-scss.js",
         "clean": "node scripts/clean.js",
-        "start": "npm run build && node scripts/start.js",
+        "start": "npm run build && serve -s dist",
         "start:debug": "npm run build && node scripts/start-debug.js"
     },
     "description": "A freelancer portfolio HTML theme for Bootstrap.",
@@ -38,9 +38,9 @@
         "url": "https://github.com/StartBootstrap/startbootstrap-freelancer.git"
     },
     "dependencies": {
-        "bootstrap": "5.2.3",
-        "shelljs": "^0.8.5",
         "autoprefixer": "10.4.14",
+        "bootstrap": "5.2.3",
+        "bootstrap-icons": "^1.11.1",
         "browser-sync": "2.29.1",
         "chokidar": "3.5.3",
         "concurrently": "6.3.0",
@@ -48,9 +48,20 @@
         "prettier": "2.8.6",
         "pug": "3.0.2",
         "sass": "1.60.0",
-        "upath": "2.0.1",
-        "bootstrap-icons": "^1.11.1"
+        "serve": "^14.2.1",
+        "shelljs": "^0.8.5",
+        "upath": "2.0.1"
     },
     "devDependencies": {
+        "autoprefixer": "10.4.14",
+        "bootstrap-icons": "^1.11.1",
+        "browser-sync": "2.29.1",
+        "chokidar": "3.5.3",
+        "concurrently": "6.3.0",
+        "postcss": "8.4.21",
+        "prettier": "2.8.6",
+        "pug": "3.0.2",
+        "sass": "1.60.0",
+        "upath": "2.0.1"
     }
 }
