--- a/package.json
+++ b/package.json
@@ -49,8 +49,7 @@
         "pug": "3.0.2",
         "sass": "1.60.0",
         "serve": "^14.2.1",
-        "shelljs": "^0.8.5",
-        "upath": "2.0.1"
+        "shelljs": "^0.8.5"
     },
     "devDependencies": {
         "autoprefixer": "10.4.14",
@@ -62,6 +61,6 @@
         "prettier": "2.8.6",
         "pug": "3.0.2",
         "sass": "1.60.0",
-        "upath": "2.0.1"
+        "upath": "^2.0.1"
     }
 }
