inside the package-lock.json file, the upath node wasnt being read by heroku, so changed the dev key to false

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "url": "https://github.com/StartBootstrap/startbootstrap-freelancer.git"
     },
     "dependencies": {
+        "upath": "^2.0.1",
         "autoprefixer": "10.4.14",
         "bootstrap": "5.2.3",
         "bootstrap-icons": "^1.11.1",
@@ -49,10 +50,10 @@
         "pug": "3.0.2",
         "sass": "1.60.0",
         "serve": "^14.2.1",
-        "shelljs": "^0.8.5",
-        "upath": "^2.0.1"
+        "shelljs": "^0.8.5"
     },
     "devDependencies": {
+        "upath": "^2.0.1",
         "autoprefixer": "10.4.14",
         "bootstrap-icons": "^1.11.1",
         "browser-sync": "2.29.1",
@@ -61,7 +62,6 @@
         "postcss": "8.4.21",
         "prettier": "2.8.6",
         "pug": "3.0.2",
-        "sass": "1.60.0",
-        "upath": "^2.0.1"
+        "sass": "1.60.0"
     }
 }
